# libsv

./: .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  .verible-verilog-format  .verible-verilog-format.yaml  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile.dev  Doxyfile  LICENSE  README.md  README.rst  counter.v  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  create-issue-branch.yml  docker-publish.txt  docker-publish.yml  docker-retag.yml  main.txt  main.yml
docs/: requirements.txt
docs/source/: arbiters.rst  base.rst  bcd_decoder.rst  bcd_encoder.rst  binary_counter.rst  bit_ops.rst  coders.rst  conf.py  contact.rst  contributing.rst  core.rst  counter.rst  counters.rst  decoder_8b10b.rst  decoders.rst  encode_decode.rst  encoder_8b10b.rst  encoders.rst  fifos.rst  full_adder.rst  half_adder.rst  helper.py  index.rst  latch.rst  latches.rst  license.rst  math.rst  modules.rst  mux.rst  muxes.rst  onehot_mux.rst  onehot_priority_encoder.rst  priority_encoder.rst  ring_arbiter.rst  rotate.rst  skid_buffer.rst  sr_latch.rst  useful_links.rst
include/: functions.svh  test.hpp
libsv/arbiters/: ring_arbiter.sv
libsv/bit_ops/: rotate.sv
libsv/coders/: bcd_decoder.sv  bcd_encoder.sv  decoder_8b10b.sv  encoder_8b10b.sv  gray_decoder.sv  gray_encoder.sv  onehot_priority_encoder.sv  priority_encoder.sv
libsv/counters/: binary_counter.sv
libsv/encoders/: encoder_5b6b.sv  encoder_8b10b.sv
libsv/fifos/: async_fifo.sv  skid_buffer.sv  sync_fifo.sv
libsv/latches/: sr_latch.sv
libsv/math/: full_adder.sv  half_adder.sv
libsv/muxes/: onehot_mux.sv
libsv/synchronizers/: synchronizer.sv
openhdl/encode_decode/bcd_decoder/: bcd_decoder.sv
openhdl/math/half_adder/: half_adder.sv
src/: counter.sv
src/base/mux/: mux.sv  onehot_mux.sv
src/core/: counter.sv
src/core/counter/: counter.sv
src/core/mux/: onehot_mux.sv
src/counter/: counter.sv
src/encode_decode/bcd_encoder/: bcd_encoder.sv
src/latch/sr_latch/: sr_latch.sv
src/math/full_adder/: full_adder.sv
tb/: CMakeLists.txt  counter_tb.sv  foo.cpp  test_counter.cpp  test_counter2.cpp
test/: CMakeLists.txt  CounterWrapper.cpp  CounterWrapper.hpp  test.cpp  test.hpp  test_counter.cpp
test/base/: CMakeLists.txt
test/base/counter/: CMakeLists.txt  CounterWrapper.hpp  test_counter.cpp
test/base/mux/: CMakeLists.txt  MuxWrapper.cpp  MuxWrapper.hpp  OneHotMuxWrapper.cpp  OneHotMuxWrapper.hpp  test_mux.cpp  test_onehot_mux.cpp
test/core/: CMakeLists.txt
test/core/counter/: CMakeLists.txt
test/core/mux/: CMakeLists.txt  OneHotMuxWrapper.hpp
test/counter/: CMakeLists.txt  CounterWrapper.cpp  CounterWrapper.hpp  test_counter.cpp
test/math/: CMakeLists.txt
test/math/half_adder/: CMakeLists.txt  HalfAdderWrapper.cpp  HalfAdderWrapper.hpp  test_half_adder.cpp
tests/: CMakeLists.txt  conftest.py  test.cpp  test.hpp  test_counter.cpp  utils.py
tests/arbiters/: test_ring_arbiter.py
tests/bit_ops/: test_rotate.py
tests/coders/: test_bcd_decoder.py  test_bcd_encoder.py  test_decoder_8b10b.py  test_encoder_8b10b.py  test_gray_decoder.py  test_gray_encoder.py  test_onehot_priority_encoder.py  test_priority_encoder.py
tests/core/: CMakeLists.txt  test_counter.cpp
tests/core/counter/: counter_cocotb.py  test_counter.py
tests/core/mux/: onehot_mux_cocotb.py  test_onehot_mux.py
tests/counters/: test_binary_counter.py
tests/decoders/: test_bcd_decoder.py
tests/encode_decode/bcd_decoder/: test_bcd_decoder.py
tests/encode_decode/bcd_encoder/: test_bcd_encoder.py
tests/encoders/: test_bcd_encoder.py  test_encoder_5b6b.py  test_encoder_8b10b.py
tests/fifos/: test_async_fifo.py  test_skid_buffer.py  test_sync_fifo.py
tests/latch/sr_latch/: test_sr_latch.py
tests/latches/: test_sr_latch.py
tests/math/: test_full_adder.py  test_half_adder.py
tests/math/full_adder/: full_adder_cocotb.py  test_full_adder.py
tests/math/half_adder/: half_adder_cocotb.py  test_half_adder.py
tests/muxes/: test_onehot_mux.py
tests/synchronizers/: test_synchronizer.py
tests/utils/: openhdl_test_utils.py
tools/: precommit.py  precommit.sh
